# chocolate_road

./: .gitignore  Cargo.toml  README.md  build.sh
src/: listener.rs  main.rs  uploader.rs
src/exchange/: binance.rs  bitmex.rs  gdax_l2.rs  mod.rs
src/orderbook/: analyze.rs  engine.rs  mod.rs  tectonic.rs
src/tests/: exchange_bench.rs  mod.rs  orderbook_state.rs
