[package]
name = "rusty_road"
version = "0.1.0"
authors = ["Gerardo Salazar <gsalaz9800@gmail.com>"]

[dependencies]
chrono = "0.4"
crossbeam = "0.4"
futures-preview = "0.2.2"
ndarray = { version = "0.12.0", features = ["blas"] }
rayon = "1.0"
redis = "0.9.1"
reqwest = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.10.0"
strum_macros = "0.10.0"
url = "1.7.1"

[dependencies.ws]
version = "0.7.8"
features = ["ssl"]