[package]
name = "rusty_road"
version = "0.1.0"
authors = ["Gerardo Salazar <gsalaz9800@gmail.com>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.4"
futures-preview = "0.2.2"
ndarray = { version = "0.12.0", features = ["blas"] }
rayon = "1.0"
redis = "0.9.1"
reqwest = "0.9.0"
rusoto_core = "0.35.0"
rusoto_s3 = "0.35.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
strum = "0.10.0"
strum_macros = "0.10.0"
tar = "0.4"
url = "1.7.1"
xz2 = "0.1.6"

[dependencies.ws]
version = "0.7.8"
features = ["ssl"]

[profile.release]
opt-level = 3